--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,10 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Bankline" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryDark">@color/purple_700</item>
-        <item name="colorAccent">@color/teal_200</item>
-        <!-- Customize your theme here. -->
+    <!-- https://m3.material.io/libraries/mdc-android/getting-started -->
+    <style name="AppTheme" parent="Theme.Material3.Dark">
+        <!-- https://m3.material.io/libraries/mdc-android/color-theming -->
+        <item name="colorPrimary">@color/primary_200</item>
+        <item name="colorPrimaryContainer">@color/primary_700</item>
+        <item name="colorOnPrimaryContainer">@color/primary_100</item>
+        <item name="colorPrimaryInverse">@color/primary_600</item>
     </style>
+    <!-- Interesting alternative to Material 3: https://material-foundation.github.io/material-theme-builder -->
 </resources>
